<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:elevation="4dp"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_width="match_parent"
            app:titleTextColor="@color/black"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/toolbar_details_title"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/transaction_date"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            tools:text="25.04.2022"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/transaction_sum"/>

        <TextView
            android:id="@+id/tvSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            tools:text="2000$"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/transaction_name"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            tools:text="Albert Akopyan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/transaction_phone_number"/>

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            tools:text="+7 (966) 888-99-88"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/transaction_bank_card"/>

        <TextView
            android:id="@+id/tvBankCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            tools:text="XXXX XXXX XXXX XXXX"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>