<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="viewModel"
            type="com.techwings.myapplication.ui.create.TransactionCreateViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
    
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
            android:layout_height="wrap_content"
            android:background="@color/white">
    
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:elevation="4dp"
                app:titleTextColor="@color/black"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_width="match_parent"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:title="@string/toolbar_new_title"
                app:layout_scrollFlags="scroll|enterAlways"/>
    
        </com.google.android.material.appbar.AppBarLayout>
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">
    
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/transaction_surname"
                    android:textColor="@color/black"
                    android:text="@={viewModel.surname}"/>
    
            </com.google.android.material.textfield.TextInputLayout>
    
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/black"
                    android:hint="@string/transaction_firstname"
                    android:textColor="@color/black"
                    android:text="@={viewModel.firstName}"/>
    
            </com.google.android.material.textfield.TextInputLayout>
    
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:textColorHint="@color/black"
                app:prefixText="+7"
                app:prefixTextColor="@color/black"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:hint="@string/transaction_phone_number"
                    android:maxLength="14"
                    android:text="@={viewModel.phone}"/>
    
            </com.google.android.material.textfield.TextInputLayout>
    
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:textColorHint="@color/black"
                app:suffixText="₽"
                app:suffixTextColor="@color/black"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="@color/black"
                    android:hint="@string/transaction_sum"
                    android:textColor="@color/black"
                    android:text="@={viewModel.sum}"/>
    
            </com.google.android.material.textfield.TextInputLayout>
    
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                app:boxStrokeColor="@color/black"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBankCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="01234 56789"
                    android:inputType="number"
                    android:maxLength="19"
                    android:textColorHint="@color/black"
                    android:hint="@string/transaction_bank_card"
                    android:textColor="@color/black"
                    android:text="@={viewModel.bankCard}"/>
    
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:clickable="true"
                android:text="@string/save"
                android:focusable="true" />

        </LinearLayout>
    
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    
</layout>